# openmarket

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yaml  entrypoint-compose.sh  gunicorn.py  manage.py  pyproject.toml  setup.cfg
api/: filters.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: load_data.py
api/migrations/: 0001_initial.py  0002_auto_20210808_2142.py
api/services/: load_data.py
api/tests/: test_serializers.py  test_views.py
contrib/: get_dot_env.py
k8s/: config-map-postgres.yml  deployment-api.yml  pg-init-script.sql  postgres.yml  secret-api.yml  secret-postgres.yml  service-api.yml
openmarket/: settings.py  urls.py  wsgi.py
