[tool.poetry]
name = "openmarket"
version = "0.1.0"
description = ""
authors = ["Thiago Olieira Vicente <oliveiravicente.net@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dj-database-url = "^0.5.0"
Django = "^3.2.6"
django-filter = "^2.4.0"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
numpy = "^1.21.1"
pandas = "^1.3.1"
psycopg2-binary = "^2.9.1"
python-json-logger = "^2.0.2"
python-decouple = "^3.4"
drf-yasg = "^1.20.0"
requests = "^2.26.0"
djangorestframework-gis = "^0.17"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
ipdb = "^0.13.9"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
model-mommy = "^2.0.0"
pytest-django = "^4.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
